<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".log_in">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="181dp"
            android:layout_height="184dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@mipmap/app_icon" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="15dp"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingBottom="15dp"
            android:textColorHint="@color/colorAccent" />

        <Button
            android:id="@+id/buttonLogin"
            android:background="@color/colorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:text="@string/button_login"
            android:textSize="10pt"
            android:textAllCaps="false"
            android:textColor="@color/buttonTextColor"
            android:onClick="onClick"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/forgot_password_text"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            android:onClick="onClick"
            android:clickable="true" />

        <Button
            android:id="@+id/buttonAnonymous"
            android:background="@color/colorButtonTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:text="@string/button_anonymous"
            android:textSize="10pt"
            android:textAllCaps="false"
            android:onClick="onClick"
            android:textColor="@color/buttonTextColor" />

        <TextView
            android:id="@+id/textViewSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/sign_up_text"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            android:onClick="onClick"
            android:clickable="true" />

    </LinearLayout>

    </RelativeLayout>

</LinearLayout>