<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimary">

        <!-- App Icon contained as imageview -->
        <ImageView
            android:layout_width="213dp"
            android:layout_height="230dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@mipmap/app_icon" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <!-- Email Address EditText container -->
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingBottom="15dp"
                android:textColorHint="@color/colorAccent" />

            <!-- Password EditText container -->
            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:textColorHint="@color/colorAccent" />

            <!-- Register Button links to RegisterUser method which registers the user -->
            <Button
                android:id="@+id/buttonRegister"
                android:background="@color/colorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="7dp"
                android:text="@string/button_register"
                android:textSize="10pt"
                android:textAllCaps="false"
                android:textColor="@color/buttonTextColor" />

            <!-- TextView links to log_in.xml activity -->
            <TextView
                android:id="@+id/textViewSignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/log_in_text"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>