<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".forgot_Password">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="213dp"
            android:layout_height="230dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@mipmap/app_icon" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/textViewResetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/reset_password_text"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent"
                android:clickable="true" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingBottom="15dp"
                android:textColorHint="@color/colorAccent" />

            <Button
                android:id="@+id/button_passwordreset"
                android:background="@color/colorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="7dp"
                android:text="@string/reset_password"
                android:textSize="10pt"
                android:textAllCaps="false"
                android:onClick="resetPassword"
                android:textColor="@color/buttonTextColor" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>