<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    cardview:cardCornerRadius="4dp"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/post_content_layout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:layout_margin="5dp"
            android:textSize="8sp"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/postText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_below="@+id/date"/>

        <View
            android:id="@+id/viewBottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/postText"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/likeButton"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_below="@+id/viewBottom"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/ic_comment_round" />

        <TextView
            android:id="@+id/likeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewBottom"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/likeButton"
            android:text="@string/comment" />

        <ImageView
            android:id="@+id/reportButton"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_below="@+id/viewBottom"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/ic_flag" />

        <TextView
            android:id="@+id/report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewBottom"
            android:layout_marginTop="15dp"
            android:layout_toLeftOf="@id/reportButton"
            android:text="@string/flag" />

    </RelativeLayout>

</android.support.v7.widget.CardView>